8269820: C2 PhaseIdealLoop::do_unroll get wrong opaque node