src/hotspot/share/opto/loopnode.cpp
@@ -4941,19 +4941,21 @@ bool PhaseIdealLoop::is_canonical_loop_entry(CountedLoopNode* cl) {
   if (cmpzm == NULL || !cmpzm->is_Cmp()) {
     return false;
   }
-  // compares can get conditionally flipped
-  bool found_opaque = false;
-  for (uint i = 1; i < cmpzm->req(); i++) {
-    Node* opnd = cmpzm->in(i);
-    if (opnd && opnd->Opcode() == Op_Opaque1) {
-      found_opaque = true;
-      break;
-    }
-  }
-  if (!found_opaque) {
+  if (get_opaque_from_cmp(cmpzm) == NULL) {
     return false;
   }
   return true;
+}
+
+Node* PhaseIdealLoop::get_opaque_from_cmp(Node* cmp) {
+  // compares can get conditionally flipped
+  for (uint i = 1; i < cmp->req(); i++) {
+    Node* opnd = cmp->in(i);
+    if (opnd && opnd->Opcode() == Op_Opaque1) {
+      return opnd;
+    }
+  }
+  return NULL;
 }
 
 //------------------------------get_late_ctrl----------------------------------
